[gd_scene load_steps=14 format=3 uid="uid://8a7r4mtotqys"]

[ext_resource type="Script" path="res://scripts/skeleton.gd" id="1_bsaco"]
[ext_resource type="Texture2D" uid="uid://c01n2sw85pm33" path="res://graphics/enemies/skeleton_sprite_frames_new.png" id="2_no4f0"]
[ext_resource type="PackedScene" uid="uid://bv8qch318a5hw" path="res://components/health_component.tscn" id="4_ttrkm"]
[ext_resource type="PackedScene" uid="uid://bjhxw6l7uqbqt" path="res://components/hitbox_component.tscn" id="5_deo0b"]
[ext_resource type="Script" path="res://components/DamageFlashComponent.gd" id="5_ogunf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hf0or"]
atlas = ExtResource("2_no4f0")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bh68o"]
atlas = ExtResource("2_no4f0")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3k47a"]
atlas = ExtResource("2_no4f0")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d838r"]
atlas = ExtResource("2_no4f0")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jccdo"]
atlas = ExtResource("2_no4f0")
region = Rect2(64, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_5w2sy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hf0or")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bh68o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3k47a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d838r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jccdo")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u16pg"]
radius = 5.0
height = 22.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ns4sj"]
radius = 6.0

[node name="Skeleton" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_bsaco")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(1, 0)
sprite_frames = SubResource("SpriteFrames_5w2sy")
autoplay = "default"
frame_progress = 0.026017

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_u16pg")

[node name="HealthComponent" parent="." instance=ExtResource("4_ttrkm")]

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("healthComponent", "damageFlashComponent") instance=ExtResource("5_deo0b")]
collision_layer = 2
collision_mask = 9
healthComponent = NodePath("../HealthComponent")
damageFlashComponent = NodePath("../DamageFlashComponent")

[node name="Hitbox" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CapsuleShape2D_ns4sj")

[node name="DamageFlashComponent" type="Node2D" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("5_ogunf")
sprite = NodePath("../AnimatedSprite2D")

[node name="HitTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="HitboxComponent" to="." method="_on_hitbox_component_area_entered"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
